# tensorflowSeq2Seq

./: README.md  pyproject.toml
config/: fnet.iwslt.de-en.yaml  mlpmixer.iwslt.de-en.yaml  nngram.iwslt.de-en.yaml  reltransformer.iwslt.de-en.yaml  transformer.iwslt.de-en.yaml  transformer.wmt.en-de.yaml
models/: __init__.py  fnet.py  mlpmixer.py  nngram.py  reltransformer.py  transformer.py
tensorflowSeq2Seq/: convert.py  search.py  train.py
tensorflowSeq2Seq/model/: modules.py  optimizers.py  scores.py
tensorflowSeq2Seq/search/: beam_search_fast.py  beam_search_long.py  greedy_search.py  search_algorithm.py  search_algorithm_selector.py
tensorflowSeq2Seq/tests/: test__TranslationDataset__end2end.py  test__TranslationDataset__modules.py  test__beam_search_fast.py  test__scores.py
tensorflowSeq2Seq/tests/res/: mockup_data_src  mockup_data_tgt  mockup_vocab_src.pickle  mockup_vocab_tgt.pickle
tensorflowSeq2Seq/util/: checkpoint_manager.py  config.py  data.py  debug.py  globals.py  setup.py  threading.py  timer.py  trainer.py
tools/: _setup_env.py  data_test_bench.py  model_test_bench.py  test_tflite_model.py
