[tool.poetry]
name = "tensorflowSeq2Seq"
version = "0.1.0"
description = ""
authors = ["Felix <felix.schmidt3@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.9.0"
numpy = "^1.22.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
